--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flask-migrate = "*"
 sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
+flask-bcrypt = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
