--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ flask-restful = "*"
 flask-cors = "*"
 flask-bcrypt = "*"
 python-dotenv = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
+honcho = "*"
 
 [dev-packages]
 
